--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://img.freepik.com/free-photo/book-white-background_9975-6517.jpg?ga=GA1.2.1264475413.1713260550&semt=ais_hybrid" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- <link rel="icon" href="https://img.freepik.com/free-photo/book-white-background_9975-6517.jpg?ga=GA1.2.1264475413.1713260550&semt=ais_hybrid"> -->
+    <title>Buy book</title>
   </head>
   <body>
     <div id="root"></div>
